Fixed misaligned chevron

--- a/_sass/components/_getting-started-page.scss
+++ b/_sass/components/_getting-started-page.scss
@@ -136,6 +136,11 @@
   }
 }
 
+p.accordion {
+  display: inline-block;
+  width: 100%;
+}
+
 .svg-accordion {
   float: right;
 }
